# ivina

./: CMakeLists.txt  backup.tgz  setup.sh
doc/: CMakeLists.txt  Doxyfile.in  doxygen.conf
doc/GeneratedDoc/html/: graph_legend.html  index.html
doc/GeneratedDoc/latex/: refman.tex
ext/src/: CMakeLists.txt
ext/src/gmock/: CMakeLists.txt
ext/src/gtest/: CMakeLists.txt
inc/: CounterFactory.h  ICounter.h  IObject.h  ObjectManager.h
inc/core/: Object.h
learninglunch/: .gitignore
learninglunch/.workspace/: database  mysql
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/object/: CMakeLists.txt  Object.cpp
src/core/object/gtest/: CMakeLists.txt  gtest-object.cpp
src/counters/: CMakeLists.txt  Counter.cpp  Counter.h  CounterFactory.cpp
src/counters/Decrementor/: CMakeLists.txt  Decrementor.cpp  Decrementor.h
src/counters/Decrementor/gtest/: CMakeLists.txt  gtest-decrementor.cpp
src/counters/Incrementor/: CMakeLists.txt  Incrementor.cpp  Incrementor.h
src/counters/Incrementor/gtest/: CMakeLists.txt  gmock-incrementor.cpp  gmock-incrementor.h  gtest-incrementor.cpp
src/counters/gtest/: CMakeLists.txt  gtest-counter-factory.cpp  gtest-counter.cpp
src/object/: CMakeLists.txt  IObject.cpp  Object.cpp  Object.h  ObjectManager.cpp
src/object/gtest/: CMakeLists.txt  gtest-object.cpp
